<resources>
    <string name="app_name">iTripalot.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Welcome back, what\'s up?</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="name">Name</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="destination">Destination</string>
    <string name="done">Done</string>
    <string name="get_in_touch">Get in touch</string>
    <string name="delete">Delete</string>
    <string name="rating">Rating</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="about">About</string>
    <string name="add_trip">New Trip</string>
    <string name="statistics">Statistics</string>
    <string name="about_page_url">https://openweathermap.org/</string>
    <string name="contact_uri">tel:+40749939944</string>
    <string name="weather">Weather now</string>
    <string name="weather_unavailable">Could not fetch weather for this city.</string>
    <string name="statistic_total_trips_text">You\'ve made %d trips</string>
    <string name="statistics_total_favourites_text">of which %d were just</string>
    <string name="statistics_total_cost_text">Your traveling adventures cost you a total of \n %.2f %s \n\n Let\'s see the highlights:</string>
    <string name="statistics_priciest_text">Priciest trip: %.2f %s</string>
    <string name="statistics_cheapest_text">Cheapest trip: %.2f %s</string>
    <string name="your_travels_rating">Your adventures rating:</string>
    <string name="delete_journal">Delete journal</string>
    <string name="currency">Currency</string>
    <string name="minimum_trip_price">Minimum trip price</string>
    <string name="maximum_trip_price">Maximum trip price</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="gallery_sel_failed">Selecting picture from Gallery failed.</string>
    <string name="camera_sel_failed">Selecting picture from Camera failed.</string>
</resources>
