<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.travelapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_addEditTrip"
            app:destination="@+id/addEditTripFragment" />
        <action
            android:id="@+id/action_tripDetails"
            app:destination="@id/tripDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.travelapp.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/addEditTripFragment"
        android:name="com.example.travelapp.ui.addedittrip.AddEditTripFragment"
        android:label="@string/add_trip"
        tools:layout="@layout/fragment_add_edit_trip">
        <argument
            android:name="tripid"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/tripDetailsFragment"
        android:name="com.example.travelapp.ui.details.TripDetailsFragment"
        tools:layout="@layout/fragment_trip_details">
        <argument
            android:name="tripid"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.example.travelapp.ui.statistics.StatisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.travelapp.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />

</navigation>