<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.statistics.StatisticsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/statistics_total_trips_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableTop="@drawable/ic_trips"
        android:drawablePadding="5dp"
        android:drawableTint="@color/colorAccent"
        android:gravity="center"
        android:text="@string/statistic_total_trips_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/statistics_total_favourites_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableBottom="@drawable/ic_favorite"
        android:drawablePadding="5dp"
        android:drawableTint="@color/colorAccent"
        android:gravity="center"
        android:text="@string/statistics_total_favourites_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statistics_total_trips_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/statistics_total_spent_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableTop="@drawable/ic_money"
        android:drawablePadding="5dp"
        android:drawableTint="@color/colorAccent"
        android:gravity="center"
        android:text="@string/statistics_total_cost_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statistics_total_favourites_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/statistics_total_priciest_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableStart="@drawable/ic_up"
        android:drawablePadding="5dp"
        android:drawableTint="@color/colorAccent"
        android:gravity="center"
        android:text="@string/statistics_priciest_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statistics_total_spent_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/statistics_total_cheapest_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_down"
        android:drawablePadding="5dp"
        android:drawableTint="@color/colorAccent"
        android:gravity="center"
        android:text="@string/statistics_cheapest_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="@+id/statistics_total_priciest_tv"
        app:layout_constraintStart_toStartOf="@+id/statistics_total_priciest_tv"
        app:layout_constraintTop_toBottomOf="@id/statistics_total_priciest_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/statistics_mean_rating_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/your_travels_rating"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statistics_total_cheapest_tv" />

    <RatingBar
        android:id="@+id/statistics_mean_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:numStars="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statistics_mean_rating_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/statistics_delete_all_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/delete_journal"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statistics_mean_rating_bar" />


</androidx.constraintlayout.widget.ConstraintLayout>