<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.settings.SettingsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settings_currency_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/currency"
        android:textColorHint="@color/background_stroke_input"
        app:boxStrokeColor="@color/background_stroke_input"
        app:counterTextColor="@color/background_stroke_input"
        app:hintEnabled="true"
        app:hintTextColor="@color/background_stroke_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/settings_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settings_min_price_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/minimum_trip_price"
        android:textColorHint="@color/background_stroke_input"
        app:boxStrokeColor="@color/background_stroke_input"
        app:counterTextColor="@color/background_stroke_input"
        app:hintEnabled="true"
        app:hintTextColor="@color/background_stroke_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/settings_min_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settings_max_price_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/maximum_trip_price"
        android:textColorHint="@color/background_stroke_input"
        app:boxStrokeColor="@color/background_stroke_input"
        app:counterTextColor="@color/background_stroke_input"
        app:hintEnabled="true"
        app:hintTextColor="@color/background_stroke_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/settings_max_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_save_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statistics_mean_rating_bar" />

</LinearLayout>