<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/add_edit_trip_picture_iv"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorBlackTransparent"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_edit_trip_gallery_bt"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:backgroundTint="@color/colorAccent"
                app:cornerRadius="25dp"
                app:icon="@drawable/ic_gallery"
                app:layout_constraintStart_toStartOf="@id/add_edit_trip_picture_iv"
                app:layout_constraintTop_toTopOf="@id/add_edit_trip_picture_iv" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_edit_trip_camera_bt"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:backgroundTint="@color/colorAccent"
                app:cornerRadius="25dp"
                app:icon="@drawable/ic_camera"
                app:layout_constraintEnd_toEndOf="@id/add_edit_trip_picture_iv"
                app:layout_constraintTop_toTopOf="@id/add_edit_trip_picture_iv" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/add_edit_content_padding"
                app:layout_constraintTop_toBottomOf="@id/add_edit_trip_picture_iv">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_edit_trip_name_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColorHint="@color/background_stroke_input"
                    app:boxStrokeColor="@color/background_stroke_input"
                    app:counterTextColor="@color/background_stroke_input"
                    app:hintEnabled="true"
                    app:hintTextColor="@color/background_stroke_input"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_edit_trip_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/colorAccent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_edit_trip_destination_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/background_stroke_input"
                    app:boxStrokeColor="@color/background_stroke_input"
                    app:counterTextColor="@color/background_stroke_input"
                    app:hintEnabled="true"
                    app:hintTextColor="@color/background_stroke_input"
                    app:layout_constraintTop_toBottomOf="@id/add_edit_trip_name_til"
                    app:placeholderTextColor="@color/colorAccent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_edit_trip_destination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/destination"
                        android:textColor="@color/colorAccent" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/add_edit_trip_type_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/type"
                    app:layout_constraintBottom_toBottomOf="@id/add_edit_trip_type_rg"
                    app:layout_constraintEnd_toEndOf="@id/label_barrier"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/add_edit_trip_type_rg" />

                <RadioGroup
                    android:id="@+id/add_edit_trip_type_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/label_barrier"
                    app:layout_constraintTop_toBottomOf="@id/add_edit_trip_destination_til">

                    <RadioButton
                        android:id="@+id/add_edit_trip_type_city_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city_break"
                        android:textColor="@color/colorWhite" />

                    <RadioButton
                        android:id="@+id/add_edit_trip_type_sea_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sea_side"
                        android:textColor="@color/colorWhite" />

                    <RadioButton
                        android:id="@+id/add_edit_trip_type_mountain_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mountains"
                        android:textColor="@color/colorWhite" />
                </RadioGroup>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/add_edit_trip_min_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/add_edit_trip_price_sb"
                    app:layout_constraintTop_toTopOf="@id/add_edit_trip_price_tv" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/add_edit_trip_max_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@id/add_edit_trip_price_sb"
                    app:layout_constraintTop_toTopOf="@id/add_edit_trip_price_tv" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/add_edit_trip_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="2000"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="@id/add_edit_trip_price_sb"
                    app:layout_constraintStart_toStartOf="@id/add_edit_trip_price_sb"
                    app:layout_constraintTop_toBottomOf="@id/add_edit_trip_type_rg" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/add_edit_trip_price_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/price"
                    app:layout_constraintBottom_toBottomOf="@id/add_edit_trip_price_sb"
                    app:layout_constraintEnd_toEndOf="@id/label_barrier"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/add_edit_trip_price_tv" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/add_edit_trip_price_sb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/label_barrier"
                    app:layout_constraintTop_toBottomOf="@id/add_edit_trip_price_tv" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/add_edit_trip_start_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/start_date"
                    app:layout_constraintBottom_toBottomOf="@id/add_edit_trip_start_date_dp"
                    app:layout_constraintEnd_toEndOf="@id/label_barrier"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/add_edit_trip_start_date_dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/background_date_picker_view"
                    app:layout_constraintBottom_toBottomOf="@id/add_edit_trip_start_date_label"
                    app:layout_constraintEnd_toEndOf="@id/add_edit_trip_start_date_dp"
                    app:layout_constraintStart_toStartOf="@id/add_edit_trip_start_date_dp"
                    app:layout_constraintTop_toTopOf="@id/add_edit_trip_start_date_label" />

                <DatePicker
                    android:id="@+id/add_edit_trip_start_date_dp"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginStart="16dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/label_barrier"
                    app:layout_constraintTop_toBottomOf="@id/add_edit_trip_price_sb" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/add_edit_trip_end_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/end_date"
                    app:layout_constraintBottom_toBottomOf="@id/add_edit_trip_end_date_dp"
                    app:layout_constraintEnd_toEndOf="@id/label_barrier"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/add_edit_trip_end_date_dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/background_date_picker_view"
                    app:layout_constraintBottom_toBottomOf="@id/add_edit_trip_end_date_label"
                    app:layout_constraintEnd_toEndOf="@id/add_edit_trip_start_date_dp"
                    app:layout_constraintStart_toStartOf="@id/add_edit_trip_start_date_dp"
                    app:layout_constraintTop_toTopOf="@id/add_edit_trip_end_date_label" />

                <DatePicker
                    android:id="@+id/add_edit_trip_end_date_dp"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginStart="16dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/label_barrier"
                    app:layout_constraintTop_toBottomOf="@id/add_edit_trip_start_date_dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/add_edit_trip_rating_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/rating"
                    app:layout_constraintBottom_toBottomOf="@id/add_edit_trip_rating_bar"
                    app:layout_constraintEnd_toEndOf="@id/label_barrier"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/add_edit_trip_rating_bar" />

                <RatingBar
                    android:id="@+id/add_edit_trip_rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:numStars="5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/label_barrier"
                    app:layout_constraintTop_toBottomOf="@id/add_edit_trip_end_date_dp" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/label_barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="right"
                    app:constraint_referenced_ids="add_edit_trip_start_date_label,add_edit_trip_end_date_label,add_edit_trip_rating_label,add_edit_trip_price_label,add_edit_trip_type_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_edit_trip_save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/colorAccent"
        app:borderWidth="0dp"
        app:srcCompat="@drawable/ic_done"
        app:tint="@color/colorWhite" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_edit_trip_delete_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/colorAccent"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_delete"
        app:tint="@color/colorWhite" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>